part2/2_3/manifests/deployment-main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: main-application
  name: dev-kub-main-app-2-3-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-kub-main-app-2-3
  template:
    metadata:
      labels:
        app: dev-kub-main-app-2-3
    spec:
      containers:
        - name: main-app
          image: niklasku/dev_kub_main_app:2_1_4
