part2/2_3/manifests/service-main.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: main-application
  name: dev-kub-main-app-2-3-svc
spec:
  type: ClusterIP
  selector:
    app: dev-kub-main-app-2-3
  ports:
    - name: main-app
      port: 2345
      protocol: TCP
      targetPort: 3000
